# AutoReview

./: README.md  pyproject.toml
app/: github_content.py  main.py
app/static/: script.js  styles.css
app/templates/: form.html
tests/: test.py
